2004-08-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaType.cs : quick build fix.

2004-08-30  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaDatatype.cs : Removed FromName(localName) that cannot
	  handle xdt:* types.
	* XmlSchemaType.cs : added internal GetBuiltInType() methods that
	  mix GetBuiltInSimpleType() and GetBuiltInComplexType().

2004-08-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSimpleType.cs : Fill list types such as xs:IDREFS.
	* XmlSchemaType.cs :
	  Fixed TypeCode more (broken on predefined list types and xs:anyType).

2004-08-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaType.cs :
	  anyType was anonymous, thus GetBuiltInComplexType() didn't work.

2004-08-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaType.cs : return XmlTypeCode.AnyAtomicType for
	  anySimpleType's TypeCode property.

2004-08-10  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchema.cs : Replace XmlSchemaCollection with XmlSchemaSet that
	  used to maintain compiled schema state.
	  Simplified code a bit (Include processing).
	  Set IsCompiled = true only when successfully compiled.
	* XmlSchemaCollection.cs : Now it totally delegates its processing
	  to XmlSchemaSet. Removed unused methods.
	* XmlSchemaElement.cs : Added post-compiled information initializer
	  method, and call it before (re)Compile().
	* XmlSchemaSet.cs :
	  - Replaced internal store from Dictionary to List, since schema
	    resources for one target namespace can be more than one (that's why
	  - Schemas(string targetNamespace) returns ICollection).
	  - Now global schemaset members are added per schema addition (it is
	    more MS compatible than before).
	  - Use GetSafeNs() to do targetNamespace comparison correctly.

	  XmlSchemaSet looks still unstable, so it will be changed again.

	* XmlSchemaSimpleTypeRestriction.cs,
	  XmlSchemaSimpleTypeUnion.cs,
	* XmlSchemaUtil.cs : Consider xdt namespace.

2004-08-10  Atsushi Enomoto <atsushi@ximian.com>
