@@ -1,3 +1,9 @@
+2004-09-03  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XmlSchema.cs : When schema inclusion results in a recursion, just
+	  skip recursed schema.
+	* BUGS-MS.txt : added another entry. Reflected response from Microsoft.
+
 2004-08-30  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlSchemaType.cs : quick build fix.
